# PersonalLog

./: .env.example  .eslintrc.json  .gitignore  .npmrc  AGENT3_IMPLEMENTATION_SUMMARY.md  AGENT4_DAG_VISUALIZATION_COMPLETE.md  AGENT5_ERROR_RECOVERY_COMPLETE.md  AGENT_2_AUTO_MERGE_COMPLETE.md  AGENT_5_STT_VERIFICATION_REPORT.md  AGENT_6_INTEGRATION_POLISH_COMPLETE.md  AGENT_FEATURE_FLAG_INTEGRATION.md  AGENT_TEMPLATE_LIBRARY_COMPLETE.md  AI_AGENT_ONBOARDING.md  ALL_SYSTEMS_READY.md  ANALYTICS_CIRCULAR_DEPENDENCY_FIX.md  AUDIT_REPORT.md  AUTO_MERGE_IMPLEMENTATION_COMPLETE.md  AUTO_MERGE_SUMMARY.md  BACKUP_RECOVERY_IMPLEMENTATION.md  CHANGELOG.md  CHARTER.md  CIRCULAR_DEPENDENCY_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_REFINEMENT_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_REFINEMENT_SUMMARY.md  CONTEXT_OPTIMIZER_GUIDE.md  CONTEXT_OPTIMIZER_QUICKREF.md  CONTRIBUTING.md  DEBUG_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT.md  DOCKSIDE-EXAM.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  END_TO_END_VALIDATION.md  EXTRACTION_COMPLETE.md  FAST_LAUNCH.md  FINAL-SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  GITHUB_REPOSITORY_NAMING_GUIDE.md  GITHUB_SETUP_GUIDE.md  (+41 more)
.agents/: FINAL_SUMMARY.md  ORCHESTRATION_PLAN.md  SUPERINSTANCE_TOOL_ROADMAP.md  WORK_STATUS.md  rounds-4-6-summary.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  README.md  RELEASE_CHECKLIST_v1.0.0.md  RELEASE_NOTES_v1.0.0.md  dependabot.yml  pull_request_template.md
docs/: ACCESSIBILITY.md  AGENT_4_SUMMARY.md  ANALYTICS.md  API_REFERENCE.md  ARCHITECTURE.md  (+64 more)
native/rust/: Cargo.toml
native/rust/src/: lib.rs  vector.rs
(+1147 files in other folders)
